Added a few things

--- a/src/main.tex
+++ b/src/main.tex
@@ -3,7 +3,7 @@
 
 % Preamble
 \documentclass[11pt]{article}
-\title{Gedächtnissprotokoll Jagdprüfung}
+\title{Gedächtnisprotokoll Jagdprüfung}
 \author{Tobias Famos}
 
 % Packages
@@ -19,30 +19,32 @@
 
     \section{Wildtierbiliogie}
     \begin{enumerate}
-        \item Welcher is marderartig? (Dachs, Eichhörnchen, Waschbär, Fuchs)
-        \item Vogel erkennen ca 6 Fotos quer über alle Ordnungen. Nur art nennen
-        \item Bild von Hirsch: Welches Tier sehen sie hier und ansprechen
+        \item Welcher ist marder-artig? (Je ein bild von: Dachs, Eichhörnchen, Waschbär, Fuchs)
+        \item Vogel erkennen ca 6 Fotos quer über alle Ordnungen (Bitte nennen Sie nur die Art)
+        \item Bild von Hirsch: Welches Tier sehen sie hier und sprechen Sie es an?
         \item Bild von Goldschakal: Welches Tier sehen Sie hier?
-        \item Zwei Krickern einer Gams bekomen: Welches Tier? Wie Alt? Welches Geschelcht?
+        \item Zwei Hörner einer Gams  (von der gleichen Gams): Von welchem Tier stammen diese Hörner? Wie Alt? Welches Geschelcht?
         \item Horn eines Steinbocks: Wie Alt?
         \item Geweihzyklus vom Hirsch
         \item Länge Zyklus vom Hirsch
         \item Können Sie vom Geweih eines Hirsches auf sein Alter schliessen?
+        \item Wie verlöuft die Brunft beim Hirsch?
+        \item Welches Tier sehen sie auf dem Bild? (Auerhahn)
+        \item Wie nennt man die Paarungszeit beim Auerwild?
+        \item Wie verläuft die Balz vom Auerwild?
+        \item Beschreiben Sie den Lebensraum vom Auerwild
     \end{enumerate}
 
     \section{Wild und Umwelt}
     \begin{enumerate}
-        \item
         \item Grösse der Population von Gamswild im Frühjahr im Kanton Graubünden.
         \item Grösse der Population von Steinwild im Frühjahr im Kanton Graubünden.
         \item Waldzustände
         \item Bild von Fragmentierter Kulturlandschaft: Wie beinflusst eine solche Landschaft das Wild?
         \item Wer ist der grösste Feind der Biodiversität?
-        \item
         \item Bild von Lebensraum: Beschreiben Sie den Lebensraum und welche Lebewesen vorkommen
         \item Abbildung aus Buch von Stoffkerislauf: Was sehen Sie hier und beschreiben Sie?
         \item Was ist Bioakkumulation?
-        \item
     \end{enumerate}
 
     \section{Jagdkunde}
@@ -57,9 +59,6 @@
         \item Wie nähern sie sich geschossenem Wild?
         \item Was tun Sie wenn das Wild nicht im Feuer liegt?
         \item Wie fordern Sie einen Schweisshund an? (Folgefrage: und müssen Sie den Wildhüter informieren?)
-        \item Welches Tier sehen sie auf dem Bild? (Auerhahn)
-        \item Balz vom Auerwild
-        \item Lebensraum vom Auerwild
     \end{enumerate}
 \section{Generelle Anmerkungen}
     \begin{itemize}
