Add Disclaimer and extend Notes

--- a/src/main.tex
+++ b/src/main.tex
@@ -3,7 +3,7 @@
 
 % Preamble
 \documentclass[11pt]{article}
-\title{Gedächtnisprotokoll Jagdprüfung}
+\title{Gedächtnisprotokoll Jagdprüfung 2022}
 \author{Tobias Famos}
 
 % Packages
@@ -22,28 +22,33 @@
         \item Welcher ist marder-artig? (Je ein bild von: Dachs, Eichhörnchen, Waschbär, Fuchs)
         \item Vogel erkennen ca 6 Fotos quer über alle Ordnungen (Bitte nennen Sie nur die Art)
         \item Bild von Hirsch: Welches Tier sehen sie hier und sprechen Sie es an?
+        \item Können Sie vom Geweih eines Hirsches auf sein Alter schliessen?
+        \item Wann wirft ein Hirsch sein Geweih ab?
+        \item Wie lange wächst das Geweih eines Hirsches?
         \item Bild von Goldschakal: Welches Tier sehen Sie hier?
         \item Zwei Hörner einer Gams  (von der gleichen Gams): Von welchem Tier stammen diese Hörner? Wie Alt? Welches Geschelcht?
         \item Horn eines Steinbocks: Wie Alt?
-        \item Geweihzyklus vom Hirsch
-        \item Länge Zyklus vom Hirsch
-        \item Können Sie vom Geweih eines Hirsches auf sein Alter schliessen?
         \item Wie verlöuft die Brunft beim Hirsch?
-        \item Welches Tier sehen sie auf dem Bild? (Auerhahn)
+        \item Bild von einem Auerhahn: Welches Tier sehen sie auf dem Bild?
         \item Wie nennt man die Paarungszeit beim Auerwild?
         \item Wie verläuft die Balz vom Auerwild?
+        \item Wo brütet das Auerwild?
+        \item Wie nennt man die Küken beim Auerwild?
         \item Beschreiben Sie den Lebensraum vom Auerwild
+        \item (Kiefer von einem Reh): Wie alt ist dieses Reh (Prüfer sagte am Anfang absichtlich schon, dass es sich hier um ein Reh handelt)?
+        \item Schädel eines Fuchses: Von welchem Tier stammt dieser Schädel?
     \end{enumerate}
 
     \section{Wild und Umwelt}
     \begin{enumerate}
         \item Grösse der Population von Gamswild im Frühjahr im Kanton Graubünden.
         \item Grösse der Population von Steinwild im Frühjahr im Kanton Graubünden.
-        \item Waldzustände
-        \item Bild von Fragmentierter Kulturlandschaft: Wie beinflusst eine solche Landschaft das Wild?
+        \item Bild der natürlichen Waldentwicklungsphase (Jagen in der Schweiz S179): Was sehen sie auf dem Bild?
+        Benennen Sie die verscheidenden Phasen
+        \item Bild von Fragmentierter Kulturlandschaft: Wie beeinflusst eine solche Landschaft das Wild?
         \item Wer ist der grösste Feind der Biodiversität?
         \item Bild von Lebensraum: Beschreiben Sie den Lebensraum und welche Lebewesen vorkommen
-        \item Abbildung aus Buch von Stoffkerislauf: Was sehen Sie hier und beschreiben Sie?
+        \item Abbildung aus Buch von Stoffkreislauf: Was sehen Sie hier und beschreiben Sie?
         \item Was ist Bioakkumulation?
     \end{enumerate}
 
@@ -57,19 +62,32 @@
         \item Bild von Hirschkuh auf Kuppe: Schiessen sie hier?
         \item Was ist ein Kammerstich?
         \item Wie nähern sie sich geschossenem Wild?
-        \item Was tun Sie wenn das Wild nicht im Feuer liegt?
+        \item Was tun Sie, wenn das Wild nicht im Feuer liegt?
         \item Wie fordern Sie einen Schweisshund an? (Folgefrage: und müssen Sie den Wildhüter informieren?)
     \end{enumerate}
 \section{Generelle Anmerkungen}
     \begin{itemize}
-        \item Meine Prüfer halfen mir, wennn ich die Fragen nicht wusste, oder nicht wusste was der Prüfer von mir gerne hören würde
+        \item Meine Prüfer halfen mir, wennn ich die Fragen nicht wusste, oder nicht wusste was der Prüfer von mir gerne hören würden.
+        Als beispiel folgendes Gedächtnisprotokoll von meiner Wildtier-Prüfung:\\~
+        [Experte] Wie nennt man die Jungen des Auerwild? \\~
+        [Teilnehmer] Mir ist die weidmännische Bezeichnung für die Jungen entfallen.\\~
+        [Experte] Im Bezug auf die vorher gestellte Frage wo brütet das Auerwild\\~
+        [Teilnehmer] Nestflüchter\\~
+        [Experte] Danke, nächste Frage
+
+
+
         \item Der Prüfer sagt einem nicht, ob die Antwort korrekt war oder nicht, aber es ist ziemlich klar an der Reaktion einiger Prüfer erkennbar.
         \item Es müssen alle Fragen durchgemacht werden.
-        Der Prüfer kann einen nur anhand des vorhanden Fragebogens bewerten.
-        Wir konnten nur die Hälfte der Fragen beantworten gilt nicht.
-        Wenn früher fertig dann ist früher schluss, wenn zu spät fertig wird ein wenig überzogen und die restlichen Fragen werden im Schnelldurchlauf beantwortet.
-        Nichts wenn ich halt mehr sage am Anfang kann der Prüfer weniger Fragen stellen.
+        Der Prüfer bewertet die Kandidaten mittels der vordefinierten Fragen und kann (so wie ich das mitbekommen habe) nicht einfach einige Fragen überspringen oder auslassen.
+        Der Tipp, erzählt so viel wie Ihr könnt, dann stellt der Prüfer eventuell weniger Fragen ist somit falsch (bin mir nicht mehr sicher ob der aus dem Kurs oder von einem Jäger kam).
+        Es folgt: Wer schneller die Fragen beantwortet ist früher fertig, wer die ersten Fragen sehr ausgiebig beantwortet (ist mir bei Wild und Umwelt passiert) der muss die Restlichen im Schnelldurchlauf beantworten.
     \end{itemize}
 
-
+    \newpage
+    \section*{Disclaimer}
+    Bei diesem Dokument handelt es sich um ein privates Gedächtnisprotokoll eines Prüfungsteilnehmers.
+    Es wird kein Anspruch auf Vollständigkeit oder Korrektheit erhoben.
+    Dieses Dokument ist nicht zur öffentlichen Publikation gedacht.
+    Allfällige öffentliche Publikationen sind gegen den Willen des Autors erfolgt.
 \end{document}
