--- a/src/main.tex
+++ b/src/main.tex
@@ -17,7 +17,7 @@
     Alles wie erwartet.
     48 Fragen, bei 38 korrekt eine 6.
 
-    \section{Wildtierbiliogie}
+    \section{Wildtierbiologie}
     \begin{enumerate}
         \item Welcher ist marder-artig? (Je ein bild von: Dachs, Eichhörnchen, Waschbär, Fuchs)
         \item Vogel erkennen ca 6 Fotos quer über alle Ordnungen (Bitte nennen Sie nur die Art)
@@ -28,15 +28,19 @@
         \item Bild von Goldschakal: Welches Tier sehen Sie hier?
         \item Zwei Hörner einer Gams  (von der gleichen Gams): Von welchem Tier stammen diese Hörner? Wie Alt? Welches Geschelcht?
         \item Horn eines Steinbocks: Wie Alt?
-        \item Wie verlöuft die Brunft beim Hirsch?
+        \item Wie verlauft die Brunft beim Hirsch?
         \item Bild von einem Auerhahn: Welches Tier sehen sie auf dem Bild?
         \item Wie nennt man die Paarungszeit beim Auerwild?
         \item Wie verläuft die Balz vom Auerwild?
         \item Wo brütet das Auerwild?
         \item Wie nennt man die Küken beim Auerwild?
-        \item Beschreiben Sie den Lebensraum vom Auerwild
+        \item Beschreiben Sie den Lebensraum vom Auerwild.
         \item (Kiefer von einem Reh): Wie alt ist dieses Reh (Prüfer sagte am Anfang absichtlich schon, dass es sich hier um ein Reh handelt)?
         \item Schädel eines Fuchses: Von welchem Tier stammt dieser Schädel?
+        \item Nennen Sie drei indirekte Wildnachweise für den Biber.
+        \item Nennen Sie zwei parasitäre Krankheiten
+        \item Was ist Zoonose?
+        \item Nennen Sie zwei Beispiele für Zoonose?
     \end{enumerate}
 
     \section{Wild und Umwelt}
@@ -54,8 +58,14 @@
 
     \section{Jagdkunde}
     \begin{enumerate}
-        \item Pirschzeichen
-        \item Was kann ein Jäger das Jahr über tun um seine treffsicherheit zu garantieren?
+        \item Was bedeuted Weidmännisch?
+        \item Wie Zeichnet Wild?
+        \item Welches ist der optimale Schuss und wieso?
+        \item Piktogramme von 10 Zeichnungen vom Rehwild: Welcher Schuss war ein Blattschuss?
+        \item Wie flüchtet ein Tier nach einem Blattschuss?
+        \item Einige Knochenfragmente (mit Zähnen): Sie finden folgende Pirschzeichen, was für einen Schuss haben sie getätigt?
+        \item Wie gestaltet sich die Nachsuche eines Äserschusses?
+        \item Was kann ein Jäger das Jahr über tun um seine Treffsicherheit zu garantieren?
         \item Wie verhalten Sie sich unmittelbar (30 Sekunen) vor dem Schuss?
         \item Wie verhalten Sie sich unmittelbar nach dem Schuss (nächste 5 Minuten)?
         \item Bild von Hirschstier auf Kuppe: Schiessen sie hier?
@@ -64,6 +74,9 @@
         \item Wie nähern sie sich geschossenem Wild?
         \item Was tun Sie, wenn das Wild nicht im Feuer liegt?
         \item Wie fordern Sie einen Schweisshund an? (Folgefrage: und müssen Sie den Wildhüter informieren?)
+        \item 2 Bilder von Hunden: Um welche Hunde handelt es sich?
+        \item Nennen Sie mir alle 5 Arten von Hunden
+        \item Nennen Sie mir alle Jagdmethoden für die Niederjagd
     \end{enumerate}
 \section{Generelle Anmerkungen}
     \begin{itemize}
