--- a/src/main.tex
+++ b/src/main.tex
@@ -102,5 +102,5 @@
     Bei diesem Dokument handelt es sich um ein privates Gedächtnisprotokoll eines Prüfungsteilnehmers.
     Es wird kein Anspruch auf Vollständigkeit oder Korrektheit erhoben.
     Dieses Dokument ist nicht zur öffentlichen Publikation gedacht.
-    Allfällige öffentliche Publikationen sind gegen den Willen des Autors erfolgt.
+    Allfällige öffentliche Publikationen erfolgen ohne das Einverständnis des Autors.
 \end{document}
