Add Number of Questons Comment

--- a/src/main.tex
+++ b/src/main.tex
@@ -87,9 +87,7 @@
         [Experte] Im Bezug auf die vorher gestellte Frage wo brütet das Auerwild\\~
         [Teilnehmer] Nestflüchter\\~
         [Experte] Danke, nächste Frage
-
-
-
+        \item Die Anzahl Fragen kam mir als grösser als 20 vor.
         \item Der Prüfer sagt einem nicht, ob die Antwort korrekt war oder nicht, aber es ist ziemlich klar an der Reaktion einiger Prüfer erkennbar.
         \item Es müssen alle Fragen durchgemacht werden.
         Der Prüfer bewertet die Kandidaten mittels der vordefinierten Fragen und kann (so wie ich das mitbekommen habe) nicht einfach einige Fragen überspringen oder auslassen.
